# simple-api-rust-actix-web-app

./: Cargo.toml
src/: handler.rs  main.rs  model.rs  response.rs
