[package]
name = "simple-api-actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
serde = { version = "1.0.208", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }
